[gd_scene load_steps=2 format=2]

[ext_resource path="res://main/lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="root" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="root"]
margin_right = 320.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="hbox" type="HBoxContainer" parent="root/vbox"]
margin_top = 94.0
margin_right = 320.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="root/vbox/hbox"]
margin_left = 62.0
margin_right = 258.0
margin_bottom = 52.0
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="host_options" type="HBoxContainer" parent="root/vbox/hbox/VBoxContainer"]
margin_right = 196.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="name_input" type="LineEdit" parent="root/vbox/hbox/VBoxContainer/host_options"]
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
placeholder_text = "NICKNAME"

[node name="Host" type="Button" parent="root/vbox/hbox/VBoxContainer/host_options"]
margin_left = 154.0
margin_right = 196.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Host"

[node name="join_options" type="HBoxContainer" parent="root/vbox/hbox/VBoxContainer"]
margin_top = 28.0
margin_right = 196.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="ip_input" type="LineEdit" parent="root/vbox/hbox/VBoxContainer/join_options"]
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
text = "127.0.0.1"
placeholder_text = "HOST_IP"

[node name="Join" type="Button" parent="root/vbox/hbox/VBoxContainer/join_options"]
margin_left = 154.0
margin_right = 196.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Join"
[connection signal="text_changed" from="root/vbox/hbox/VBoxContainer/host_options/name_input" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="root/vbox/hbox/VBoxContainer/host_options/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="root/vbox/hbox/VBoxContainer/join_options/Join" to="." method="_on_Join_pressed"]
